@@ -43,7 +43,7 @@ public class PublicationBean extends FileBean {
 	}
 
 	public PublicationBean(String id) {
-		domainFile.setId(new Long(id));
+		domainFile.setId(Long.valueOf(id));
 	}
 
 	public PublicationBean(Publication publication) {
